@@ -15,6 +15,9 @@ Post-v3.3.0
        with indentation.
    - Python:
      * Added support for choosing the output format, e.g. 'json' or 'text'.
+     * Added new option [--pretty] to print JSON output in a readable fashion.
+       E.g. members of objects and elements of arrays are printed one per line,
+       with indentation.
 
 
 v3.3.0 - 16 Feb 2024
